name:                monad-tune
version:             0.1.0.0
synopsis:            A monad for auto-tuning program optimizations.
-- description:         
license:             BSD2
license-file:        LICENSE
author:              Mike Vollmer
maintainer:          vollmerm@indiana.edu
-- copyright:           
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
source-repository head
  type:     git
  location: git://github.com/vollmerm/monad-tune.git

library
  exposed-modules:     Control.Monad.Tune, Control.Monad.Tune.Search
  build-depends:       base >=4.7 && <4.8,
                       transformers == 0.4.*, mtl >= 2.2, MonadRandom >= 0.3, random, containers
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base >=4.7 && <4.8,
                 hspec >= 1.3, transformers == 0.4.*, monad-tune, random, containers
  default-language:    Haskell2010